# ECE408

./: .gitmodules  CMakeLists.txt  README.md  RGAT.json  hello_world.cu  mp01_webgpu.cu  mp02.cu  mp02_mat_product_tiled.cu  mp0_template.cu  mp1.cu  mp1_implement.cu  mp2_implement.cu  mp3_implement.cu  mp4_implement.cu  mp5.cu  mp5_implement.cu  mp5_implement_v1.cu  mp6.cu  mp6_implement.cu  mp7_implement.cu  mp8_implement.cu  test_code.py
lab_description/: mp10_description.md  mp11_description.md  mp1_decription.md  mp2_description.md  mp3_description.md  mp4_description.md  mp5_description.md  mp6_description.md  mp7_description.md  mp8_description.md  mp9_description.md
lib/: wb.h  wbArg.cpp  wbArg.h  wbAssert.h  wbCUDA.cpp  wbCUDA.h  wbCast.h  wbComparator.h  wbExit.cpp  wbExit.h  wbExport.cpp  wbExport.h  wbFile.cpp  wbFile.h  wbImage.cpp  wbImage.h  wbImport.cpp  wbImport.h  wbInit.cpp  wbInit.h  wbLogger.cpp  wbLogger.h  wbMalloc.h  wbPPM.cpp  wbPPM.h  wbSolution.cpp  wbSolution.h  wbString.h  wbTimer.cpp  wbTimer.h  wbTypes.h
notes/: atomic_operation.md  data_transfer.md  mp02.md  mp04.md  mp05.md  mp07.md  mp08.md
slices/: ece408-lecture2-CUDA-introduction-fall-2015.ppt  ece408-lecture3-CUDA-introduction-Part2-fall-2015.pptx  ece408-lecture4-CUDA parallelism-model-2015.pptx  ece408-lecture5-6-CUDA-memory-model-2015.pptx  ece408-lecture7-dram-fall-2015.pptx
slides/: ece408-Lecture11 reduction tree 2015 (1).pptx  ece408-lecture10-convolution-analysis-2015.pptx  ece408-lecture12-reduction-tree-part2-2015 (1).pptx  ece408-lecture8-convolution-constant-memory-2015 (3).pptx
templates/: Readme.md  mp10_template.cu  mp11_template.cu  mp2_template.cu  mp3_template.cu  mp4_template.cu  mp7_template.cu  mp8_template.cu  mp9_template.cu
test_data/: Readme.md
test_data/mp01/0/: output.raw  res.raw
test_data/mp01/1/: output.raw  res.raw
test_data/mp01/2/: input1.raw  res.raw
test_data/mp01/3/: input1.raw
test_data/mp01/4/: input0.raw
test_data/mp01/5/: input0.raw
test_data/mp01/6/: input0.raw  input1.raw  output.raw
test_data/mp01/7/: input0.raw
test_data/mp01/8/: input0.raw
test_data/mp01/9/: input0.raw  output.raw
test_data/mp01/data/0/: input0.raw  input1.raw
test_data/mp01/data/1/: input0.raw  input1.raw
test_data/mp01/data/2/: input0.raw  output.raw
test_data/mp01/data/3/: input0.raw  output.raw
test_data/mp01/data/4/: input1.raw  output.raw
test_data/mp01/data/5/: input1.raw  output.raw
test_data/mp01/data/7/: input1.raw  output.raw
test_data/mp01/data/8/: input1.raw  output.raw
test_data/mp01/data/9/: input1.raw
test_data/mp02/0/: input0.raw  input1.raw  input2.raw  output.raw
test_data/mp02/1/: input0.raw  input1.raw  output.raw
test_data/mp02/2/: input0.raw  input1.raw  output.raw
test_data/mp02/3/: input0.raw  input1.raw  output.raw
test_data/mp02/4/: input0.raw  input1.raw  output.raw
test_data/mp02/5/: input0.raw  input1.raw  output.raw
test_data/mp02/6/: input0.raw  input1.raw  output.raw
test_data/mp02/7/: input0.raw  input1.raw  output.raw
test_data/mp02/8/: input0.raw  input1.raw  output.raw
test_data/mp02/9/: input0.raw  input1.raw  output.raw
test_data/mp03/0/: .output.raw.swo  .res.raw.swp  input0.raw  output.raw  res.raw
test_data/mp04/0/: input.raw  input0.raw  output.raw
test_data/mp04/1/: input0.raw  output.raw
test_data/mp04/2/: input0.raw  output.raw
test_data/mp04/3/: input0.raw  output.raw
test_data/mp04/4/: input0.raw  output.raw
test_data/mp04/5/: input0.raw  output.raw
test_data/mp04/6/: input0.raw  output.raw
test_data/mp04/7/: input0.raw  output.raw
test_data/mp04/8/: input0.raw  output.raw
test_data/mp04/9/: input0.raw  output.raw
test_data/mp05/0/: input.raw  output.raw
test_data/mp05/1/: input.raw  output.raw
test_data/mp05/2/: input.raw  output.raw
test_data/mp05/3/: input.raw  output.raw
test_data/mp05/4/: input.raw  output.raw
test_data/mp05/5/: input.raw  output.raw
test_data/mp05/6/: input.raw  output.raw
test_data/mp05/7/: input.raw  output.raw
test_data/mp05/8/: input.raw  output.raw
test_data/mp05/9/: input.raw  output.raw
test_data/mp06/0/: input0.ppm  input1.csv  output.ppm
test_data/mp07/0/: input.ppm  output.ppm
test_data/mp08/0/: input0.raw  input1.raw  output.raw
test_data/mp09/0/: input.csv  output.csv
tools/: Readme.md  bank_conflict.cu  memory_transfer.cu  mp1_dataset.cpp  mp2_dataset.cpp  mp3_dataset.cpp  mp4_dataset.cpp  mp5_dataset.cpp  mp6_dataset.cpp  mp6_dataset.py  mp7_dataset.cpp  mp7_dataset.py  test_code.py  test_code_mp7.py
